Fixed reactive flow for particpant component
Many bugs squashed here. Ensured next and prev index scanner worked properly.

Workspace resets as expected, without infinite responses pulls.

Others

--- a/apps/cpa-angular/src/styles.scss
+++ b/apps/cpa-angular/src/styles.scss
@@ -73,6 +73,10 @@ p {
   @include align-content(center);
   padding: 0.4rem 0;
 
+  .record-title {
+    font-weight: 500;
+  }
+
   .material-icons-container {
     .material-icons {
       padding: 0 0.25rem;
